Exclamation mark '!' doesn't input with AZERTY keyboard mapping #30479

Closed
opened 2012-03-07 12:12:22 +01:00 by Morgan Fraslin · 9 comments

%%%In Text editor and Python Console, I can't input the '!' character while using a keyboard with AZERTY mapping. It works in text fields in the UI. If I switch to a QWERTY mapping, it works. If I copy and past the character, it works. It's only the direct input from a keyboard in AZERTY that doesn't work.

Tested on Windows XP, Windows Vista and Windows 7, on 5 different machines, each with a different keyboard.%%%

%%%In Text editor and Python Console, I can't input the '!' character while using a keyboard with AZERTY mapping. It works in text fields in the UI. If I switch to a QWERTY mapping, it works. If I copy and past the character, it works. It's only the direct input from a keyboard in AZERTY that doesn't work. Tested on Windows XP, Windows Vista and Windows 7, on 5 different machines, each with a different keyboard.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Could not redo issue on Mac or Linux, probably it's a Windows specific problem.%%%

%%%Could not redo issue on Mac or Linux, probably it's a Windows specific problem.%%%

%%%Alex, can you please test this issue on windows? Or maybe even you've already got some ideas? :)%%%

%%%Alex, can you please test this issue on windows? Or maybe even you've already got some ideas? :)%%%

%%%Confirmed. Will look into it%%%

%%%Confirmed. Will look into it%%%
Member

%%%Alex is not available currently. Maybe Andrea thinks this is a fun simple bug!%%%

%%%Alex is not available currently. Maybe Andrea thinks this is a fun simple bug!%%%
Member

%%%On my mac, switching to french keyboard goes fine - I can type both 8 and ! (on same key) in python console.%%%

%%%On my mac, switching to french keyboard goes fine - I can type both 8 and ! (on same key) in python console.%%%
Member

%%%Confirmed on Windows.

Debugging session showed that for the KM_TEXTINPUT, which is used in python console for the text input the event is not matched.
In wm_eventmatch the ISTEXTINPUT matches characters with values from 32 to 255, but on the french keyboard setting (AZERTY) on Windows, the '!' comes back with winevent->type=312, winevent->ascii='!'

Will discuss best solution. Update soon :)%%%

%%%Confirmed on Windows. Debugging session showed that for the KM_TEXTINPUT, which is used in python console for the text input the event is not matched. In wm_eventmatch the ISTEXTINPUT matches characters with values from 32 to 255, but on the french keyboard setting (AZERTY) on Windows, the '!' comes back with winevent->type=312, winevent->ascii='!' Will discuss best solution. Update soon :)%%%
Member

%%%fixed in rev. 51776, thanks for reporting.
%%%

%%%fixed in rev. 51776, thanks for reporting. %%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30479
No description provided.