fix [#30479] Exclamation mark '!' doesn't input with AZERTY keyboard mapping For the french keyboard setting (AZERTY) on Windows, the '!' came back with winevent->type=312, winevent->ascii='!' and the ISTEXTINPUT only matched key codes up to 255. Now replaces with ISKEYBOARD in wm_eventmatch.